# RustyStocks

./: Cargo.toml  README.md
rusty_stocks/: Cargo.toml
rusty_stocks/src/: lib.rs
rusty_stocks/src/stock_pulse/: serializer.rs
src/: main.rs
src/config_management/: config.rs  mod.rs
src/stock_pulse/: client.rs  mod.rs  serializer.rs
