[package]
name = "rusty_stocks"
version = "0.1.1"
edition = "2021"
description = "Simple to use tool the works with 'Stock Pulse' from RapidAPI's marketplace."

[dependencies]
clap = "4.5.16"
clap-verbosity-flag = "2.2.1"
log = "0.4.22"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.39.3", features = ["full"] }
serde_json = "1.0.125"
serde = { version = "1.0.208", features = ["derive"] }
env_logger = "0.11.5"
confy = "0.6.1"
mockito = "1.5.0"
